# Raft

./: CMakeLists.txt  LICENSE  README.md
include/: RaftServer.h  RaftServerInfo.h  Task.h  Transformer.h  defines.h  exception.h
include/Role/: Base.h  Candidate.h  Follower.h  Leader.h  Role.h
include/Rpc/: RaftRpc.grpc.pb.h  RaftRpc.pb.h  RaftRpcClient.h  RaftRpcServer.h
proto/: External.proto  RaftRpc.proto  gen.sh
protobuf/: CMakeLists.txt  RaftExternal.proto  gen.sh
src/: CMakeLists.txt  Client.cpp  RaftServer.cpp  RaftServerInfo.cpp  Server(另一个复件).cpp  Server(复件).cpp  Server.cpp  Task.cpp  Timer.cpp  Transformer.cpp  defines.cpp  main.cpp
src/Role/: Base.cpp  Candidate.cpp  Follower.cpp  Leader.cpp  Role.cpp
src/Rpc/: RaftRpc.grpc.pb.cc  RaftRpc.pb.cc  RaftRpcClient.cpp  RaftRpcServer.cpp
test/: comprehensive_test.in  server1.json  server3.json  server5.json  std.cpp
test/1/: 1  1.cpp  1.in
test/2/: 2  2.cpp  test.in
test/info1/: server3.json  server4.json
test/info2/: client.json  server4.json
test/info3/: server0.json  server3.json  server4.json
test/tmp/: server0.json  server1.json  server2.json  server3.json  server5.json
test/tmp2/: server0.json  server1.json  server2.json  server3.json
test/tmp3/: client.json  server1.json  server2.json
